refactor(security): improve `Transaction History System`
- Move account ownership validation to controllers,
- enhance DTOs, 
- strengthen security checks,
- add integration tests for `transaction history system`
- rework API descriptions
- Refactor account ownership validation logic.
- provide DTO for responses from GET /api/banking/history
- clean up a few things along the way